fixed the icons overlapping

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,9 +63,7 @@ h1 {
 
 .material-symbols-outlined {
  
-position: absolute;
-top: 10;
-left: 10;
+
 
   font-size: 50px;
   font-variation-settings:
